appId: ${APP_ID}
---
- tapOn:
      id: 'TabBar.Home'
- extendedWaitUntil:
      visible: 'TOTAL BALANCE'
- tapOn:
      id: 'ActionButton'
- extendedWaitUntil:
      visible:
          id: 'ActionItem.AddAccount.Label'
- waitForAnimationToEnd
- tapOn:
      text: 'Account'
- extendedWaitUntil:
      visible: 'New Account'
- tapOn:
      id: 'CreateAccount.CASH'
- extendedWaitUntil:
      visible: 'Account Name & Icon'
- tapOn:
      text: 'e.g. Savings Account'
- inputText: ${ACCOUNT_NAME}
- tapOn:
      id: CreateAccount.Amount
- inputText: 100
- tapOn:
      text: 'Submit'
- assertVisible: ${ACCOUNT_NAME}, $100
- assertVisible: 'TOTAL BALANCE'
