appId: ${APP_ID}
---
- tapOn:
      id: 'TabBar.Home'
- extendedWaitUntil:
      visible: 'TOTAL BALANCE'

- tapOn:
      id: 'TabBar.Settings'
- extendedWaitUntil:
      visible: 'Settings'

- scrollUntilVisible:
      element:
          id: 'SettingsPage.ManageCategoriesCard'
      direction: DOWN
      speed: 20
- tapOn:
      id: 'SettingsPage.ManageCategoriesCard'
- extendedWaitUntil:
      visible: 'Categories'

- tapOn:
      id: 'ActionButton'

- waitForAnimationToEnd

- tapOn: Category

- tapOn:
      id: CategoryForm.Input
- inputText: ${CATEGORY_NAME}

- tapOn:
      id: CategoryForm.Submit

- waitForAnimationToEnd

- assertVisible: ${CATEGORY_NAME}, Swipe left

- tapOn:
      id: 'TabBar.Settings'
