appId: ${APP_ID}
---

- tapOn:
    id: 'TabBar.Transactions'
- extendedWaitUntil:
    visible: 'Transactions'

- runFlow:
    file: ../subflows/open-action-menu.flow.yaml
    env:
      ACTION_ITEM_ID: 'ActionItem.Expense'

- tapOn:
    id: 'ActionItem.Expense'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'New Expense'

- waitForAnimationToEnd
- inputText: ${AMOUNT}

- tapOn:
    id: 'TransactionForm.AccountSelector'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Input'
- tapOn:
    id: 'AccountPickerBottomSheet.Input'
- inputText: ${ACCOUNT_NAME}
- extendedWaitUntil:
    visible: ${ACCOUNT_NAME}
- tapOn:
    text: ${ACCOUNT_NAME}
    index: 1

- tapOn:
    id: 'TransactionForm.CategorySelector'
- runFlow:
    file: ./select-category-by-search.flow.yaml
    env:
      CATEGORY_NAME: ${CATEGORY_NAME}

- swipe:
    from:
      id: 'TransactionForm.CategorySelector'
    direction: UP

- tapOn:
    id: 'TransactionForm.CommentInput'
- inputText: ${TITLE}

- tapOn:
    id: 'TransactionForm.SubmitButton'

- extendedWaitUntil:
    visible: 'Transactions'
