appId: ${APP_ID}
---

- tapOn:
    id: 'TabBar.Home'
- waitForAnimationToEnd
- tapOn:
    id: 'TabBar.Settings'
- waitForAnimationToEnd
- tapOn:
    id: 'TabBar.Settings'
- extendedWaitUntil:
    visible:
      id: 'SettingsPage.Container'

- scrollUntilVisible:
    element:
      text: 'Import CSV'
    direction: DOWN
    speed: 20
- waitForAnimationToEnd
- tapOn: 'Import CSV'

- tapOn:
    id: ${CSV_DISPLAY_NAME}, csv

- extendedWaitUntil:
    visible:
      id: 'ImportScreen.Page'

- tapOn:
    id: 'ImportScreen.PresetChip.Budgie'

- tapOn:
    id: 'ImportScreen.SubmitButton'

- extendedWaitUntil:
    visible:
      id: 'TabBar.Transactions'
