appId: ${APP_ID}
---

- runFlow: open-new-account.flow.yaml

- tapOn:
    id: ${ACCOUNT_TYPE_ID}
- extendedWaitUntil:
    visible: 'ACCOUNT NAME & ICON'
    timeout: 10000

- tapOn:
    id: 'AccountForm.NameInput'
- waitForAnimationToEnd
- inputText: ${ACCOUNT_NAME}

- tapOn:
    id: 'CreateAccount.Amount'
- inputText: ${ACCOUNT_AMOUNT}

- tapOn: ${ACCOUNT_SCREEN_TITLE}
- hideKeyboard
- tapOn:
    id: 'AccountForm.SubmitButton'

- extendedWaitUntil:
    visible:
      id: 'HomePage.TotalBalance'
    timeout: 15000

- scrollUntilVisible:
    element:
      id: 'AccountCard.${ACCOUNT_NAME}'
    direction: DOWN
- assertVisible:
    id: 'AccountCard.${ACCOUNT_NAME}'
