appId: ${APP_ID}
---

- runFlow: ../navigate-to-settings.flow.yaml

- tapOn:
    id: 'SettingsPage.MainCurrencyCard'
- tapOn: 'Search currencies...'
- inputText: ${CURRENCY_CODE}
- tapOn:
    id: 'AccountForm.CurrencyOption.${CURRENCY_CODE}'
- tapOn:
    id: 'TabBar.Home'

- extendedWaitUntil:
    visible:
      id: 'HomePage.TotalBalance'
    timeout: 10000
