appId: ${APP_ID}
---
- runFlow: open-new-account.flow.yaml

- extendedWaitUntil:
      visible:
          id: 'CreateAccount.CRYPTO'
      timeout: 3000
- tapOn:
      id: 'CreateAccount.CRYPTO'
      retryTapIfNoChange: true
- waitForAnimationToEnd
- extendedWaitUntil:
      visible:
          id: 'AccountForm.NameInput'
      timeout: 3000

- tapOn:
      id: 'AccountForm.NameInput'
- inputText: ${ACCOUNT_NAME}

- scrollUntilVisible:
      element:
          id: 'AccountForm.CurrencySelector'
      direction: DOWN
- tapOn:
      id: 'AccountForm.CurrencySelector'
      retryTapIfNoChange: true
- waitForAnimationToEnd
- extendedWaitUntil:
      visible:
          id: 'CurrencySelector.SearchInput'
      timeout: 3000
- tapOn:
      id: 'CurrencySelector.SearchInput'
- eraseText: 20
- inputText: ${CURRENCY_CODE}
- extendedWaitUntil:
      visible:
          id: 'AccountForm.CurrencyOption.${CURRENCY_CODE}'
      timeout: 3000
- tapOn:
      id: 'AccountForm.CurrencyOption.${CURRENCY_CODE}'
- waitForAnimationToEnd
- extendedWaitUntil:
      notVisible:
          id: 'CurrencySelector.SearchInput'
      timeout: 3000
- extendedWaitUntil:
      visible:
          id: 'AccountForm.SelectedCurrency.${CURRENCY_CODE}'
      timeout: 3000

- tapOn:
      id: 'CreateAccount.Amount'
- eraseText: 20
- inputText: ${ACCOUNT_AMOUNT}
- tapOn:
      text: 'ACCOUNT NAME & ICON'
- extendedWaitUntil:
      visible:
          id: 'AccountForm.SelectedCurrency.${CURRENCY_CODE}'
      timeout: 3000

- scrollUntilVisible:
      element:
          id: 'AccountForm.SubmitButton'
          enabled: true
      direction: DOWN
- tapOn:
      id: 'AccountForm.SubmitButton'
      enabled: true
      retryTapIfNoChange: true

- extendedWaitUntil:
      visible:
          id: 'HomePage.TotalBalance'
      timeout: 10000
