appId: ${APP_ID}
---
- runFlow: open-new-account.flow.yaml

- extendedWaitUntil:
      visible:
          id: ${ACCOUNT_TYPE_ID}
      timeout: 3000
- tapOn:
      id: ${ACCOUNT_TYPE_ID}
      retryTapIfNoChange: true
- waitForAnimationToEnd
- extendedWaitUntil:
      visible:
          id: 'AccountForm.NameInput'
      timeout: 3000

- tapOn:
      id: 'AccountForm.NameInput'
- inputText: ${ACCOUNT_NAME}

- tapOn:
      id: 'AccountForm.CurrencySelector'
- waitForAnimationToEnd
- extendedWaitUntil:
      visible:
          id: 'CurrencySelector.SearchInput'
      timeout: 3000

- tapOn:
      id: 'CurrencySelector.SearchInput'
- inputText: ${CURRENCY_CODE}
- extendedWaitUntil:
      visible:
          id: 'AccountForm.CurrencyOption.${CURRENCY_CODE}'
      timeout: 3000
- tapOn:
      id: 'AccountForm.CurrencyOption.${CURRENCY_CODE}'
- waitForAnimationToEnd
- extendedWaitUntil:
      notVisible:
          id: 'CurrencySelector.SearchInput'
      timeout: 3000

- extendedWaitUntil:
      visible:
          id: 'CreateAccount.Amount'
      timeout: 3000
- tapOn:
      id: 'CreateAccount.Amount'
- inputText: ${ACCOUNT_AMOUNT}
- tapOn:
      text: 'ACCOUNT NAME & ICON'
- waitForAnimationToEnd

- extendedWaitUntil:
      visible:
          id: 'AccountForm.SubmitButton'
          enabled: true
      timeout: 3000

- tapOn:
      id: 'AccountForm.SubmitButton'
      enabled: true
      retryTapIfNoChange: true

- extendedWaitUntil:
      visible:
          id: 'HomePage.TotalBalance'
      timeout: 15000

- extendedWaitUntil:
      visible:
          id: 'AccountCard.${ACCOUNT_NAME}'
      timeout: 20000
