appId: ${APP_ID}
---

- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: 'AccountCard.${ACCOUNT_NAME}'
    direction: DOWN
    visibilityPercentage: 100
    waitToSettleTimeoutMs: 500
- waitForAnimationToEnd

- tapOn:
    id: 'AccountCard.${ACCOUNT_NAME}'
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible:
      id: 'AccountDetails.Page'
    timeout: 10000
