appId: ${APP_ID}
---

- evalScript: ${output.createAccountOpened = false}
- tapOn:
    id: 'TabBar.Home'
- waitForAnimationToEnd

- runFlow:
    when:
      visible: 'No accounts yet'
    commands:
      - tapOn:
          id: 'AccountsEmptyState.AddAccountButton'
      - extendedWaitUntil:
          visible:
            id: 'CreateAccount.BANK'
          timeout: 10000
      - evalScript: ${output.createAccountOpened = true}

- runFlow:
    when:
      true: ${!output.createAccountOpened}
    commands:
      - extendedWaitUntil:
          visible:
            id: 'ActionButton'
          timeout: 10000
      - tapOn:
          id: 'ActionButton'
      - waitForAnimationToEnd
      - extendedWaitUntil:
          visible:
            id: 'ActionItem.AddAccount.Label'
          timeout: 10000
      - tapOn:
          id: 'ActionItem.AddAccount.Label'
      - waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'CreateAccount.BANK'
    timeout: 10000
